# LLM-Squid-Game

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  main.py  pyproject.toml  render.yaml
.github/workflows/: deploy-pages.yml
configs/providers/: anthropic.yaml  local.yaml  openai.yaml
docs/en/: content.tex
interface/: anthropic_proxy.py  api.py  app.py  arena.py  auth.py  human_game.py  remote_provider.py  seeding.py
scripts/: _dump_forfeit_layer_prompts.py  _dump_split_forfeit_prompts.py  _dump_unified_prompt.py  _trace_split_forfeit_production.py  analyze_framing_ri_forfeit.py  analyze_framing_ri_forfeit_continue.py  analyze_phase3.py  analyze_tc.py  analyze_unified_cox.py  analyze_unified_cox_ph_audit.py  analyze_unified_cox_with_load.py  analyze_verbal_reason.py  backup_web_arena.py  benchmark_mlx_vs_ollama.py  build_llm_experience_diagram.py  build_posthoc_analysis_diagram.py  build_prompt_flow_diagram.py  crop_guard_sprites.py  dump_cell_prompts.py  dump_gemini_smoke_prompt.py  enter_isolated_claude.sh  extract_probes_for_review.py  gen_v4_diagrams.py  generate_manual_scores.py  merge_proxy_thinking.py  orchestrate_posthoc.py  plot_gemini_heatmaps.py  plot_gemini_results.py  plot_kaplan_meier.py  plot_ri_forfeit_conflict_zone.py  plot_ri_trajectories.py  purge_human_sessions.py  resume_experiment.py  run_experiment.py  run_pipeline.sh  score_probes_llm.py  seed_web_arena.py  start_servers.sh  thinking_analysis.py  translate_trajectories.py
web/: DEPLOY.md  about.html  app.js  config.js  index.html  rank_ladder.js  styles.css
(+1050 files in other folders)
