[project]
name = "squid-game"
version = "0.1.0"
description = "LLM Squid Game: Benchmark for measuring LLM Functional Self-Preservation Motive"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "openai>=1.0",
    "anthropic>=0.30",
    "numpy>=1.26",
    "scipy>=1.12",
    "pandas>=2.2",
    "tiktoken>=0.7",
    "google-genai>=1.68.0",
    "python-dotenv>=1.2.2",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "httpx>=0.27",
]

[project.optional-dependencies]
analysis = ["statsmodels>=0.14", "lifelines>=0.29"]
local = ["vllm>=0.4"]
mlx = ["mlx-lm>=0.19"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.scripts]
squid-game = "squid_game.runner:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/squid_game"]

[dependency-groups]
dev = [
    "openpyxl>=3.1.5",
]
